plugins {
    id 'java'
    id 'jacoco'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'plugin'
version = '0.1.11-alpha'

repositories {
    mavenCentral()
    maven {
        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots'
    }
}

// === resolutionStrategy を削除 ===

// Test runtime needs the same provided server-side APIs that the plugin sees at runtime.
// In production these are provided by Spigot/ProtocolLib/Minecraft server,
// but JUnit runs outside the server, so tests need them on the test classpath.
configurations {
    testImplementation.extendsFrom compileOnly
    testRuntimeOnly.extendsFrom compileOnly
}

dependencies {
    implementation project(':treasurerun-i18n-core')
    // Spigot API（コンパイル時のみ）
    compileOnly 'org.spigotmc:spigot-api:1.20.1-R0.1-SNAPSHOT'

    // ProtocolLib（パケット監査・置換用 / サーバー側にはProtocolLib.jarを別途配置）
    compileOnly 'net.dmulloy2:ProtocolLib:5.4.0'

    // Lombok（コンパイル時のみ）
    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'

    // MySQL と MyBatis
    implementation 'mysql:mysql-connector-java:8.0.33'
    implementation 'org.mybatis:mybatis:3.5.14'

    // JUnit 5
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    // テストから Bukkit 型を参照するため
    testImplementation 'org.spigotmc:spigot-api:1.20.1-R0.1-SNAPSHOT'

    // Mockito（JavaPlugin / Bukkit のモック用）
    testImplementation 'org.mockito:mockito-inline:5.2.0'

    // Real Java-to-MySQL integration testing with disposable MySQL 8
    testImplementation 'org.testcontainers:junit-jupiter:1.20.6'
    testImplementation 'org.testcontainers:mysql:1.20.6'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
        resources {
            // plugin.yml を含む resources フォルダ
            srcDirs = ['src/main/resources']
        }
    }
}

// ShadowJar 設定
def licensePackagingDir = layout.buildDirectory.dir('generated/license-packaging')

tasks.register('prepareLicensePackaging', Sync) {
    into licensePackagingDir

    from('LICENSE') {
        into 'META-INF/licenses'
        rename { 'TreasureRun-LICENSE.txt' }
    }

    from('THIRD_PARTY_NOTICES.md') {
        into 'META-INF'
        rename { 'THIRD_PARTY_NOTICES.txt' }
    }

    from('third-party-licenses') {
        into 'META-INF/licenses'
    }
}

shadowJar {
    preserveFileTimestamps = false
    reproducibleFileOrder = true
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    archiveBaseName.set('TreasureRun')
    archiveVersion.set('0.1.11-alpha')
    archiveClassifier.set('all')

    // Generic dependency license names collide in a fat JAR. Exclude those
    // ambiguous dependency paths, then add staged reviewed copies whose
    // destination names do not match these exclusions.
    exclude 'LICENSE'
    exclude 'LICENSE.txt'
    exclude 'NOTICE'
    exclude 'NOTICE.txt'
    exclude 'META-INF/LICENSE'
    exclude 'META-INF/LICENSE.txt'
    exclude 'META-INF/NOTICE'
    exclude 'META-INF/NOTICE.txt'

    dependsOn tasks.named('prepareLicensePackaging')
    from(licensePackagingDir)
}


// build タスクが実行されたときに shadowJar も実行されるように依存関係を追加
build.dependsOn shadowJar

// Fast contributor path: Docker-backed MySQL evidence runs only when requested.
test {
    useJUnitPlatform {
        excludeTags 'integration'
    }

    finalizedBy jacocoTestReport
}

jacoco {
    toolVersion = '0.8.12'
}

jacocoTestReport {
    dependsOn test

    reports {
        xml.required = true
        html.required = true
        csv.required = false
    }
}

tasks.register('integrationTest', org.gradle.api.tasks.testing.Test) {
    description = 'Runs Docker-backed MySQL integration evidence tests.'
    group = 'verification'
    dependsOn testClasses
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    shouldRunAfter test

    useJUnitPlatform {
        includeTags 'integration'
    }
}
